src/sk4rbonka/main/default/objects/sk4_family__c/sk4_family__c.object-meta.xml
<CustomObject>
    <label>Family</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Families</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>