src/sk4rbonka/main/default/objects/sk4_family__c/fields/sk4_cumulationDay__c.field-meta.xml
<CustomField>
    <fullName>sk4_cumulationDay__c</fullName>
    <label>Cumulation Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>