src/sk4rbonka/main/default/objects/sk4_family__c/fields/sk4_CumulationEnabled__c.field-meta.xml
<CustomField>
    <fullName>sk4_CumulationEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cumulation Enabled</label>
    <type>Checkbox</type>
</CustomField>