src/sk4rbonka/main/default/objects/sk4_family__c/fields/sk4_cumulationLowerTreshold__c.field-meta.xml
<CustomField>
    <fullName>sk4_cumulationLowerTreshold__c</fullName>
    <label>Cumulation Lower Treshold</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>