src/sk4rbonka/main/default/objects/sk4_family__c/fields/sk4_cumulationPercent__c.field-meta.xml
<CustomField>
    <fullName>sk4_cumulationPercent__c</fullName>
    <label>Cumulation Percent</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>