src/sk4rbonka/main/default/objects/sk4_family__c/fields/sk4_defaultParent__c.field-meta.xml
<CustomField>
    <fullName>sk4_defaultParent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Default Parent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>sk4_parent__c.sk4_family__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sk4_parent__c</referenceTo>
    <relationshipLabel>Families</relationshipLabel>
    <relationshipName>Families</relationshipName>
    <type>Lookup</type>
</CustomField>