src/sk4rbonka/main/default/objects/sk4_family__c/fields/sk4_defaultPocketMoneyAmount__c.field-meta.xml
<CustomField>
    <fullName>sk4_defaultPocketMoneyAmount__c</fullName>
    <label>Default PocketMoney Amount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>