src/sk4rbonka/main/default/objects/sk4_family__c/validationRules/Cumulation_Data_Filled_In.validationRule-meta.xml
<ValidationRule>
    <fullName>Cumulation_Data_Filled_In</fullName>
    <active>true</active>
    <errorConditionFormula>(ISBLANK( sk4_cumulationDay__c ) 
||
ISNULL(sk4_cumulationDay__c) 
||
ISBLANK(  sk4_cumulationPercent__c  ) 
||
ISNULL(sk4_cumulationPercent__c))
&amp;&amp;  sk4_CumulationEnabled__c = true</errorConditionFormula>
    <errorMessage>To enable Cumulation you must put Cumulation Day and Cumulation Percent</errorMessage>
</ValidationRule>