src/sk4rbonka/main/default/objects/sk4_family__c/validationRules/Cumulation_day_cannot_be_larger_than_31.validationRule-meta.xml
<ValidationRule>
    <fullName>Cumulation_day_cannot_be_larger_than_31</fullName>
    <active>true</active>
    <errorConditionFormula>sk4_cumulationDay__c &gt; 31</errorConditionFormula>
    <errorMessage>Cumulation day cannot be larger than 31!</errorMessage>
</ValidationRule>