src/sk4rbonka/main/default/objects/sk4_family__c/validationRules/Lower_treshold_lower_than_upper.validationRule-meta.xml
<ValidationRule>
    <fullName>Lower_treshold_lower_than_upper</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    !ISBLANK( sk4_cumulationUpperTreshold__c ),
				!ISBLANK(  sk4_cumulationLowerTreshold__c ),
				sk4_cumulationLowerTreshold__c &gt;= sk4_cumulationUpperTreshold__c
)</errorConditionFormula>
    <errorMessage>Lower Treshold must be lower than Upper Treshold</errorMessage>
</ValidationRule>