src/sk4rbonka/main/default/objects/sk4_family__c/validationRules/Pocket_Money_Filled_In.validationRule-meta.xml
<ValidationRule>
    <fullName>Pocket_Money_Filled_In</fullName>
    <active>true</active>
    <errorConditionFormula>(ISBLANK(sk4_defaultPocketMoneyAmount__c) 
||
ISNULL(sk4_defaultPocketMoneyAmount__c) 
||
ISBLANK( sk4_PocketMoneyDay__c ) 
||
ISNULL(sk4_PocketMoneyDay__c))
&amp;&amp;  sk4_ScheduledPocketMoneyEnabled__c = true</errorConditionFormula>
    <errorDisplayField>sk4_ScheduledPocketMoneyEnabled__c</errorDisplayField>
    <errorMessage>To enable Scheduled PocketMoney you must put Default PocketMoney Amount and PocketMoney Day.</errorMessage>
</ValidationRule>