src/sk4rbonka/main/default/objects/sk4_family__c/validationRules/PocketMoney_day_cannot_be_larger_than_31.validationRule-meta.xml
<ValidationRule>
    <fullName>PocketMoney_day_cannot_be_larger_than_31</fullName>
    <active>true</active>
    <errorConditionFormula>sk4_PocketMoneyDay__c  &gt; 31</errorConditionFormula>
    <errorMessage>PocketMoney Day cannot be larger than 31!</errorMessage>
</ValidationRule>